# cinema-microservice

./: compose.yaml
order/: Dockerfile.dev  pyproject.toml
order/order_app/: main.py
