[tool.poetry]
name = "order-app"
version = "0.1.0"
description = ""
authors = ["Shahzaib Noor <shahzaibnoorcs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jose = "^1.0.0"
sqlmodel = "^0.0.18"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
